# sign-language-detector

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  Makefile  README.md  README.template.md  ROADMAP.md  SUPPORT.md  config.py  detector.py  main.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
docs/: api-reference.md  api.md  architecture.md  backup.md  caching.md  cli.md  compliance.md  configuration.md  contributing.md  deployment.md  development.md  docker.md  environment.md  examples.md  faq.md  glossary.md  index.md  integration.md  logging.md  migration.md  monitoring.md  optimization.md  performance.md  quickstart.md  reference.md  roadmap.md  security.md  setup.md  testing.md  tutorial.md  usage.md
docs/guides/: best-practices.md  getting-started.md  troubleshooting.md
examples/: advanced.py  basic.py  demo.py
tests/: __init__.py  test_detector.py
